feat: add register API
