# app/Domain/Auth/Requests/RegisterRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Domain\Auth\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class RegisterRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'name' => 'required|string|max:255',
+            'email' => 'required|string|email|max:255',
+            'password' => 'required|string|min:8',
+        ];
+    }
+}
